--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -63,14 +63,15 @@
 
     <style name="commonBtn" parent="Widget.MaterialComponents.ExtendedFloatingActionButton">
 
-        <item name="android:layout_width">80dp</item>
-        <item name="android:layout_height">80dp</item>
-        <item name="cornerRadius">45dp</item>
-        <item name="android:textSize">35sp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="cornerRadius">50dp</item>
+        <item name="android:textSize">30sp</item>
         <item name="android:layout_margin">6dp</item>
         <item name="backgroundTint">#282830</item>
-        <item name="android:padding">6dp</item>
+        <item name="android:padding">0dp</item>
         <item name="android:background">@drawable/ripple_effect</item>
+        <item name="layout_constraintDimensionRatio">"1.3:1"</item>
 
     </style>
 
