--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
             android:layout_height="30dp"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="16dp"
-            android:background="@drawable/ripple_setting"
+            android:background="@drawable/ripple_back"
             android:layout_marginEnd="10dp"
             android:backgroundTint="@color/White"
             android:src="@drawable/settings_24" />
