--- a/app/src/main/res/drawable/background_bottom_sheet.xml
+++ b/app/src/main/res/drawable/background_bottom_sheet.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:topLeftRadius="26dp"
-        android:topRightRadius="26dp"/>
+    <corners android:topLeftRadius="18dp"
+        android:topRightRadius="18dp"
+        android:bottomLeftRadius="18dp"
+        android:bottomRightRadius="18dp"/>
     <solid android:color="#3c3c3c"/> <!-- Change the color if needed -->
 
 </shape>
