--- a/app/src/main/res/layout/intruder_item.xml
+++ b/app/src/main/res/layout/intruder_item.xml
@@ -6,12 +6,15 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
+    android:clickable="true"
+    android:focusable="true"
     app:cardBackgroundColor="@color/TertiaryPrimarycolor"
     android:layout_margin="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/ripple_recyclerview_item"
         android:padding="5dp">
 
         <!-- Intruder Image -->
@@ -21,7 +24,6 @@
             android:layout_height="70dp"
             android:padding="5dp"
             android:layout_marginStart="5dp"
-            android:background="@drawable/just_round_corner"
             android:scaleType="centerCrop"
             android:layout_marginEnd="16dp" />
 
