--- a/app/src/main/res/layout/bucket_item.xml
+++ b/app/src/main/res/layout/bucket_item.xml
@@ -4,14 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="5dp"
+    app:cardCornerRadius="8dp"
     app:cardElevation="5dp">
 
     <LinearLayout
         android:id="@+id/main_video_gallery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#fff"
         android:orientation="vertical">
 
         <ImageView
@@ -20,36 +19,45 @@
             android:layout_height="130dp"
             android:scaleType="centerCrop" />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:background="@color/status_bar"
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textColor="@color/Black"
-                android:textSize="20sp"
+                android:ellipsize="end"
+                android:layout_gravity="start"
+                android:gravity="start"
                 android:maxLines="1"
-                android:ellipsize="end" />
+                android:text="dlskfaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaafasda"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/title_no"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/title_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="(456)"
-                android:textColor="@color/Black"
-                android:textSize="18sp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginStart="10dp"
                 android:maxLines="1"
-                android:ellipsize="none"
-                android:layout_marginStart="1dp" />
+                android:text=" (456) "
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
 
