--- a/app/src/main/res/layout/contextual_toolbar.xml
+++ b/app/src/main/res/layout/contextual_toolbar.xml
@@ -14,11 +14,13 @@
 
                 <ImageView
                     android:id="@+id/contextual_toolbar_cutt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginEnd="5dp"
                     android:padding="5dp"
+                    android:layout_centerVertical="true"
                     android:layout_marginStart="10dp"
-                    android:src="@drawable/baseline_cancel_presentation_24" />
+                    android:src="@drawable/close" />
 
 
 
@@ -44,6 +46,7 @@
                     android:layout_gravity="end"
                     android:layout_marginEnd="5dp"
                     android:padding="5dp"
+
                     android:layout_centerVertical="true"
                     android:layout_alignParentEnd="true"
                     android:src="@drawable/baseline_check_box_outline_blank_24" />
