--- a/app/src/main/res/layout/custom_btm_hide.xml
+++ b/app/src/main/res/layout/custom_btm_hide.xml
@@ -5,14 +5,15 @@
     android:layout_height="wrap_content"
     android:layout_gravity="bottom"
     android:gravity="bottom"
+    android:layout_marginBottom="5dp"
     android:orientation="vertical"
-    android:padding="15dp">
+    android:padding="13dp">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="16dp"
-        android:background="@drawable/background_fab"
+        android:background="@drawable/ripple_for_btn"
         app:cardElevation="8dp">
 
         <LinearLayout
