--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -20,7 +20,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:padding="5dp"
-            android:src="@drawable/baseline_arrow_back_24" />
+            android:layout_centerVertical="true"
+            android:background="@drawable/ripple_back"
+            android:src="@drawable/flati_arrow_left_24" />
 
         <!-- Title -->
         <TextView
@@ -43,6 +45,7 @@
             android:layout_gravity="end"
             android:layout_marginEnd="5dp"
             android:padding="5dp"
+            android:background="@drawable/ripple_back"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:src="@drawable/baseline_menu_24" />
