--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,7 +105,7 @@
             <!-- Second RelativeLayout -->
             <RelativeLayout
 
-                android:id="@+id/new_main_Browser"
+                android:id="@+id/new_main_web_browser"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:background="@drawable/ripple_calci_hide"
@@ -164,7 +164,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="19dp"
                     android:src="@drawable/delete"
-                    android:tint="@color/white"/>
+                    app:tint="@color/white" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -184,7 +184,7 @@
     </FrameLayout>
 
     <LinearLayout
-        android:id="@+id/new_main_web_browser"
+        android:id="@+id/new_main_web_browser_long"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
