--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -3,16 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="@drawable/primary_background"
     android:padding="16dp">
 
     <!-- Back Button -->
     <ImageView
-        android:id="@+id/backButton"
+        android:id="@+id/notes_backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/baseline_arrow_back_24"
+        android:src="@drawable/flati_arrow_left_24"
         android:contentDescription="Back"
+        android:background="@drawable/ripple_back"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="16dp"
         app:tint="#ffffff" />
@@ -23,6 +24,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/check"
+        android:background="@drawable/ripple_back"
         android:contentDescription="Back"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="16dp"
@@ -38,7 +40,7 @@
         android:textColor="#ffffff"
         android:textColorHint="#808080"
         android:background="@null"
-        android:layout_below="@id/backButton"
+        android:layout_below="@id/notes_backButton"
         android:layout_marginTop="8dp"
         android:inputType="textCapWords|text" />
 
