--- a/app/src/main/res/layout/activity_recyclerview.xml
+++ b/app/src/main/res/layout/activity_recyclerview.xml
@@ -28,12 +28,13 @@
 
                 <!-- Back Arrow -->
                 <ImageView
-                    android:id="@+id/main_toolbar_back_arrow"
+                    android:id="@+id/notes_main_toolbar_back_arrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:padding="5dp"
-                    android:src="@drawable/baseline_arrow_back_24" />
+                    android:background="@drawable/ripple_back"
+                    android:src="@drawable/flati_arrow_left_24" />
 
                 <!-- Title -->
                 <TextView
@@ -41,7 +42,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Notes"
-                    android:layout_toEndOf="@+id/main_toolbar_back_arrow"
+                    android:layout_toEndOf="@+id/notes_main_toolbar_back_arrow"
                     android:textColor="#fff"
                     android:padding="5dp"
                     android:layout_centerVertical="true"
@@ -56,13 +57,14 @@
                     android:layout_centerVertical="true"
                     android:padding="5dp"
                     android:src="@drawable/delete"
+                    android:visibility="gone"
                     android:layout_marginEnd="12dp"
                     android:layout_alignParentEnd="true"
                     app:tint="@color/white" />
 
 
                 <ImageView
-                    android:id="@+id/intruder_contextual_toolbar_select_and_deselect_all"
+                    android:id="@+id/notes_delete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
@@ -71,7 +73,7 @@
                     android:visibility="gone"
                     android:layout_centerVertical="true"
                     android:layout_alignParentEnd="true"
-                    android:src="@drawable/baseline_check_box_outline_blank_24" />
+                    android:src="@drawable/baseline_delete_24" />
 
             </RelativeLayout>
 
