--- a/app/src/main/res/layout/notes_item.xml
+++ b/app/src/main/res/layout/notes_item.xml
@@ -13,6 +13,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/ripple_recyclerview_item"
         android:padding="5dp">
 
 
@@ -22,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" Jb bhi kro 100% concentration se 5 min"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textColor="@color/white"
             android:layout_marginTop="5dp"
             android:fontFamily="sans-serif"
@@ -38,25 +39,39 @@
             android:layout_below="@id/notes_Title"
             android:text="file complete l;asdkfjaldksfjalsdkf"
             android:textSize="18sp"
-            android:textColor="@color/white"
+            android:ellipsize="end"
+            android:layout_toLeftOf="@id/notes_tickMarkImageView"
+            android:textColor="#808080"
             android:fontFamily="sans-serif"
             android:layout_marginStart="14dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="0dp"/>
 
         <TextView
             android:id="@+id/notes_date"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/notes_body"
             android:text="26 October"
-            android:textSize="18sp"
-            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textColor="#808080"
             android:fontFamily="sans-serif"
             android:layout_marginStart="14dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="8dp"/>
 
 
+
+        <!-- Tick Mark Image -->
+        <ImageView
+            android:id="@+id/notes_tickMarkImageView"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="10dp"
+            android:scaleType="fitXY"
+            android:visibility="gone"
+            android:src="@drawable/baseline_check_box_24" />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
