--- a/UnicornFilePicker/src/main/res/values/colors.xml
+++ b/UnicornFilePicker/src/main/res/values/colors.xml
@@ -11,5 +11,7 @@
     <color name="unicorn_white_70">#B3FFFFFF</color>
     <color name="unicorn_light_black">#353535</color>
     <color name="unicorn_grey">#E5E7E9</color>
+    <color name="FinalPrimaryColor">#1E1F1F</color>
+
 
 </resources>
