--- a/app/src/main/res/layout/activity_video_hidden.xml
+++ b/app/src/main/res/layout/activity_video_hidden.xml
@@ -35,6 +35,38 @@
         />
 
 
+    <RelativeLayout
+        android:id="@+id/video_no_file_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/video_custom_toolbar_container"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        android:layout_marginTop="75dp"
+        android:clipToPadding="false">
+
+        <ImageView
+            android:id="@+id/videohidden_no_file"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_centerHorizontal="true"
+            android:scaleType="fitCenter"
+            android:src="@drawable/empty_box" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No File Click + to add file"
+            android:textColor="#9ab1ce"
+            android:textSize="16sp"
+            android:layout_below="@+id/videohidden_no_file"
+            android:layout_marginTop="10dp"/>
+
+
+    </RelativeLayout>
+
+
+
     <include layout="@layout/custom_bottom_appbar"
         android:id="@+id/video_custom_bottom_appbar"
         android:layout_width="match_parent"
