--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -1,62 +1,57 @@
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     app:cardCornerRadius="8dp">
 
-
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/image_item_Imageview"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:scaleType="centerCrop"
             android:background="@drawable/radius"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:scaleType="centerCrop" />
 
         <ImageView
             android:id="@+id/tickMarkImageView"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/baseline_check_box_24"
-            android:layout_alignParentEnd="true"
+            android:layout_gravity="end|top"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"/>
+            android:scaleType="fitXY"
+            android:src="@drawable/baseline_check_box_24" />
 
         <ImageView
             android:id="@+id/untickMarkImageView"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:scaleType="fitXY"
-            android:visibility="gone"
-             android:src="@drawable/baseline_check_box_outline_blank_24"
-            android:layout_alignParentEnd="true"
+            android:layout_gravity="end|top"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"/>
+            android:scaleType="fitXY"
+            android:src="@drawable/baseline_check_box_outline_blank_24"
+            android:visibility="gone" />
 
-
+        <!-- Adjusted TextView with bottom margin -->
         <TextView
             android:id="@+id/image_item_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="8dp"
+            android:layout_gravity="end|bottom"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
             android:visibility="gone"
-            android:layout_marginBottom="22dp"
-            android:background="@color/light_dark"
+            android:background="@drawable/rounded_corner_time"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"
+            android:paddingBottom="1dp"
+            android:paddingTop="1dp"
             android:text="04:45"
-            android:textColor="@color/White"
-            />
+            android:textColor="@color/White" />
 
-    </RelativeLayout>
+    </FrameLayout>
 </androidx.cardview.widget.CardView>
